--- a/index.html
+++ b/index.html
@@ -3,15 +3,63 @@
   <head>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
+    
     <meta charset="utf-8">
     <title>Tooko.id</title>
   </head>
+  <div class="all">
   <header>
     <a href ="#" class = "btn Home"><span class="fa fa-home"></span></a>
-    <a class="Logo-Header">Tooko.id</a>
+   
     <a href ="#" class = "btn Account"><span class="fa fa-user"></span></a>
     <a href ="#" class = "btn Keranjang"><span class="fa fa-cart-shopping"></span></a>
+    <center><a class="Logo-Header"><b>Tooko.id</b></a></center>
    
   </header>
+  <main>
+    <div class="main1">
+      <div class="container">
+          <h1>Penawaran Spesial</h1>
+          <h1>di Bulan Ramadhan</h1>
+          <h1>Hingga 70%!*</h1> 
+          <p>*Khusus para member atau yang memiliki akun Tooko</p>
+         <!--<p>yang memiliki akun Tooko</p> --> 
+      </div>
+  </div>
   
+    <body>
+      <div class = "tombol">
+        <ul>
+          <li class = "pencarian">Busana Muslim</li>
+          <li class = "pencarian">Sarung</li>
+          <li class = "pencarian">Kemeja</li>
+          <li class = "pencarian">Celana</li>
+          <li class = "pencarian1">Cari...<span class="fa fa-magnifying-glass"></span> </li>
+        </ul>
+      </div>
+      <div class = "Foto">
+      <ul>
+        <li class="produk"><img src="https://storage.googleapis.com/hijup-production-sg-core/system/product_image/image/518218/medium_25.jpg"></li>
+        <li class="produk"><img src="https://storage.googleapis.com/hijup-production-sg-core/system/product_image/image/518160/medium_17.jpg"></li>
+        <li class="produk"><img src="https://storage.googleapis.com/hijup-production-sg-core/system/product_image/image/518192/medium_big_v1-219-51487-95760-17201-46-128341-2.jpg"></li>
+        <li class="produk"><img src="https://i.pinimg.com/564x/f4/5c/1a/f45c1ad2570ba4215bead373f6712694.jpg"></li>
+        <li class="produk"></li>
+        </ul>
+    </div>
+    </body>
+    <footer>
+      <div class="footer-left">
+      <ul>
+             <li>Hubungi kami di:</li>
+                <li class = "buttonIG"><i class="fab fa-instagram"></i> tooko.id</li>
+      </ul>
+      </div>  
+      <div class="footer-right">
+        <ul>
+               <li>Tooko,improve dirimu</li>
+               <li >dari berpakaianmu</li>
+            </ul>
+            </div>
+    </footer>
+  </main>
 </html>
